kubernetes/longhorn/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`your-fqdn`)  # <-- Replace with your FQDN
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
      secretName: longhorn-certificate-secret
